undo the fix for caret in empty cell

After further investigation, this doesn't seem like the right fix.  See
https://bugs.webkit.org/show_bug.cgi?id=85385 where this is discussed in more
detail